--- a/index.html
+++ b/index.html
@@ -5,8 +5,39 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Amatic+SC:wght@400;700&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    
+    <div class="nav">
+        <div class="logo">
+            <h3><span>B R</span> Architects</h3>
+        </div>
+        <div class="list">
+            <a href="#">HOme</a>
+            <a href="#">project</a>
+            <a href="#">about</a>
+            <a href="#">contact</a>
+        </div>
+    </div>
+
+    <div class="hero">
+        <h3><span>B R</span> Architects</h3>
+    </div>
+
+
+
+    <div class="project">
+        <h4>Projects</h4>
+        <div class="line"></div>
+
+        <div class="container">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+            <img src="" alt="">
+        </div>
+    </div>
 </body>
 </html>
