--- a/index.html
+++ b/index.html
@@ -33,11 +33,113 @@
         <div class="line"></div>
 
         <div class="container">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
-            <img src="" alt="">
+            <div class="a1">
+                <h3>Summer House</h3>
+                <img src="images/house5.jpg" alt="">
+            </div>
+            <div class="a2">
+                <h3>Brick House</h3>
+                <img src="images/house2.jpg" alt="">
+            </div>
+            <div class="a3">
+                <h3>Renovated</h3>
+                <img src="images/house3.jpg" alt="">
+            </div>
+            <div class="a4">
+                <h3>Barn House</h3>
+                <img src="images/house4.jpg" alt="">
+            </div>
         </div>
+
+
+        <div class="container">
+            <div class="a1">
+                <h3>Summer House</h3>
+                <img src="images/house2.jpg" alt="">
+            </div>
+            <div class="a2">
+                <h3>Brick House</h3>
+                <img src="images/house4.jpg" alt="">
+            </div>
+            <div class="a3">
+                <h3>Renovated</h3>
+                <img src="images/house5.jpg" alt="">
+            </div>
+            <div class="a4">
+                <h3>Barn House</h3>
+                <img src="images/house3.jpg" alt="">
+            </div>
+        </div>
+
     </div>
+
+
+    <div class="about">
+        <h4>About</h4>
+        <div class="line"></div>
+        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+
+
+        <div class="box">
+            <div class="b2">
+                <img src="images/team2.jpg" alt="">
+                <h5>John Doe</h5>
+                <h6>CEO & Founder</h6>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <input type="button" value="Contact">
+            </div>
+            <div class="b2">
+                <img src="images/team1.jpg" alt="">
+                <h5>Jane Doe</h5>
+                <h6>Architect</h6>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <input type="button" value="Contact">
+            </div>
+            <div class="b2">
+                <img src="images/team3.jpg" alt="">
+                <h5>Mike Ross</h5>
+                <h6>Architect</h6>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <input type="button" value="Contact">
+            </div>
+            <div class="b2">
+                <img src="images/team4.jpg" alt="">
+                <h5>Dan Star</h5>
+                <h6>Architect</h6>
+                <p>Phasellus eget enim eu lectus faucibus vestibulum. Suspendisse sodales pellentesque elementum.</p>
+                <input type="button" value="Contact">
+            </div>
+        </div>
+
+
+    </div>
+
+
+
+    <div class="contact">
+        <h4>Projects</h4>
+        <div class="line"></div>
+        <p>Lets get in touch and talk about your next project.</p>
+
+        <input type="text" placeholder="Name" required>
+        <input type="email" placeholder="Email" required>
+        <input type="text" placeholder="Subject" required>
+        <input type="text" placeholder="Comment" required>
+
+        <button>Send message</button>
+    </div>
+
+
+    <div class="map">
+        <img src="images/map.jpg" alt="">
+    </div>
+
+
+    <div class="footer">
+        <h3>Powered by  <a href="#">Vidhi.com</a></h3>
+    </div>
+
+
+    
 </body>
 </html>
